Provide some X11R5 equivalent code for platforms which don't yet support R6. b=57135 r=pavlov sr=blizzard